Improve runtime and packaging with documentation